# AI-Research-Copilot

./: .env.example  .gitignore  alembic.ini  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ProtectedRoute.tsx  Sidebar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx  Results.tsx  Settings.tsx
src/research_copilot/: config.py  main.py  run.py  utils.py
src/research_copilot/agents/: __init__.py  gap_detection.py  graph.py  insight.py  planner.py  report_assembler.py  state.py  summarization.py
src/research_copilot/api/: job_store.py  schemas.py  user_context.py
src/research_copilot/api/routes/: analysis.py  auth.py  papers.py
src/research_copilot/auth/: __init__.py  dependencies.py  encryption.py  jwt_handler.py  password.py
src/research_copilot/cache/: __init__.py  embedding_cache.py  response_cache.py  semantic_cache.py
src/research_copilot/db/: __init__.py  database.py
src/research_copilot/db/migrations/: env.py
src/research_copilot/db/migrations/versions/: 6fe1957d85d7_create_users_and_api_keys.py
src/research_copilot/db/models/: __init__.py  api_keys.py  user.py
src/research_copilot/evaluation/: evaluator.py  metrics.py
src/research_copilot/ingestion/: __init__.py  chunker.py  embeddings.py  pdf_loader.py
src/research_copilot/logging/: __init__.py  logger.py
src/research_copilot/mcp/: __init__.py  client.py  server.py
src/research_copilot/mcp/tools/: arxiv_search.py  citations.py  trends.py
src/research_copilot/rag/: __init__.py  retriever.py
