[project]
name = "ai-research-copilot"
version = "0.1.0"
description = "Multi-agent AI system for research paper analysis"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # LLM & Agents
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langgraph>=0.1.0",

    # Vector DB
    "pinecone-client>=3.2.0",
    "langchain-pinecone>=0.1.0",

    # PDF
    "pypdf>=4.2.0",
    "pdfplumber>=0.11.0",

    # Embeddings / ML
    "openai>=1.30.0",
    "tiktoken>=0.7.0",

    # Tavily 
    "tavily-python>=0.3.0",
    "langchain-tavily>=0.1.0",

    # Config & Env
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",

    # Async
    "httpx>=0.27.0",
    "aiofiles>=23.2.0",

    "diskcache>=5.6.0",        # persistent cache
    "tenacity>=8.3.0",         # retries with backoff
    "ragas>=0.1.0",            # RAG evaluation metrics
    "structlog>=24.1.0",       # structured logging
    "rich>=13.7.0",            # pretty console output

    "mcp>=1.0.0",                      # official MCP Python SDK
    "fastmcp>=2.0.0",                  # MCP server framework
    "langchain-mcp-adapters>=0.1.0",   # LangChain ↔ MCP bridge
    "arxiv>=2.1.0",                    # arXiv API client
    "semanticscholar>=0.8.0",          # Semantic Scholar API
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_copilot"]

# [tool.uv.scripts]
# dev = "uvicorn research_copilot.main:app --reload --host 0.0.0.0 --port 8000"